--- a/mariadb-best-practices/index.html
+++ b/mariadb-best-practices/index.html
@@ -1,5 +1,5 @@
 <!doctype html><html lang=en-us><meta charset=utf-8><meta name=language content="english"><meta http-equiv=content-type content="text/html"><meta name=generator content="Hugo 0.82.1"><meta name=description content="Gastlit by a computer"><meta name=author content="Douglas Myers-Turnbull"><title>Best practices for MySQL/MariaDB in 2021 | Gaslit by a computer</title><meta name=viewport content="width=device-width,initial-scale=1"><link rel=stylesheet href=/css/index.css><link rel=canonical href=/mariadb-best-practices/><link rel=alternate type=application/rss+xml href title="Gaslit by a computer"><header><h1><a href>Gaslit by a computer</a></h1></header><article><header><h1>Best practices for MySQL/MariaDB in 2021</h1></header><p>This lists some best practices for MariaDB and MySQL along with scripts.
-<em>Also see: <a href=https://dmyersturnbull.github.io/software-testing/>install MariaDB without sudo</a></em></p><h2 id=database-creation>Database creation</h2><p>The current best choice for charset and collation in MariaDB with InnoDB is:</p><ul><li>charset: utf8mb4</li><li>collation: utf8mb4_unicode_520_ci</li></ul><p>Like this:</p><div class=highlight><pre style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-sql data-lang=sql><span style=color:#66d9ef>CREATE</span> <span style=color:#66d9ef>DATABASE</span> <span style=color:#f92672>`</span>valar<span style=color:#f92672>`</span> <span style=color:#66d9ef>DEFAULT</span> CHARACTER <span style=color:#66d9ef>SET</span> utf8mb4 <span style=color:#66d9ef>COLLATE</span> utf8mb4_unicode_520_ci;
+<em>Also see: <a href=https://dmyersturnbull.github.io/software-testing/>install MariaDB without sudo</a></em></p><h2 id=database-creation>Database creation</h2><p>The current best way to create a database is:</p><div class=highlight><pre style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-sql data-lang=sql><span style=color:#66d9ef>CREATE</span> <span style=color:#66d9ef>DATABASE</span> <span style=color:#f92672>`</span>valar<span style=color:#f92672>`</span> <span style=color:#66d9ef>DEFAULT</span> CHARACTER <span style=color:#66d9ef>SET</span> utf8mb4 <span style=color:#66d9ef>COLLATE</span> utf8mb4_unicode_520_ci;
 </code></pre></div><h2 id=hardening>Hardening</h2><p>To improve security, I recommend following <strong><a href="https://www.google.com/search?q=mysql+security+best+practices">dedicated security guides</a></strong>.
 <em>Note: your config file might be <code>my.cnf</code> or <code>.my.cnf</code> (with a dot).</em>
 Basic steps might include:</p><ul><li>Install with <code>mysql_secure_installation</code></li><li>Drop the <code>test</code> database</li><li>Disable remote access (e.g. with <code>bind-address=127.0.0.1</code> under <code>[mysqld]</code>)</li><li>Require TLS for remote access; run with <code>--require_secure_transport=ON</code></li><li>Start the server with <code>-chroot</code></li><li>Remove the history file (e.g. <code>.mysql_history</code>)</li><li>Set <code>set-variable=local-infile=0</code> under <code>[mysqld]</code></li><li>Obfuscate the port (something other than 3306)</li><li>Obfuscate the root username (e.g. <code>rename user root to sadf346s9</code>)</li><li>Set <code>max_connect_errors</code> under <code>[mysqld]</code> to something reasonable</li><li>Consider encrypting the stored data, such as with storage device encryption,
@@ -12,41 +12,7 @@ filesystem encryption, or <a href=https://mariadb.com/kb/en/data-at-rest-encrypt
 <span style=color:#66d9ef>grant</span> <span style=color:#66d9ef>select</span>, <span style=color:#66d9ef>insert</span>, <span style=color:#66d9ef>update</span>, <span style=color:#66d9ef>delete</span> <span style=color:#66d9ef>on</span> MY_DB_NAME <span style=color:#66d9ef>to</span> writeaccess<span style=color:#f92672>@</span>localhost;
 <span style=color:#66d9ef>grant</span> <span style=color:#66d9ef>all</span> <span style=color:#66d9ef>on</span> MY_DB_NAME <span style=color:#66d9ef>to</span> <span style=color:#66d9ef>admin</span><span style=color:#f92672>@</span>localhost;
 flush <span style=color:#66d9ef>privileges</span>;
-</code></pre></div><h2 id=write-the-schema>Write the schema</h2><p>Here’s a script to write the schema in a nice way.</p><div class=highlight><pre style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash><span style=color:#75715e>#!/usr/bin/env bash
-</span><span style=color:#75715e></span>set -euo pipefail
-IFS<span style=color:#f92672>=</span><span style=color:#e6db74>$&#39;\n\t&#39;</span>
-
-<span style=color:#66d9ef>if</span> <span style=color:#f92672>((</span> $# <span style=color:#f92672>==</span> <span style=color:#ae81ff>1</span> <span style=color:#f92672>))</span> <span style=color:#f92672>&amp;&amp;</span> <span style=color:#f92672>[[</span> <span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>1<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span> <span style=color:#f92672>==</span> <span style=color:#e6db74>&#34;--help&#34;</span> <span style=color:#f92672>]]</span>; <span style=color:#66d9ef>then</span>
-	echo <span style=color:#e6db74>&#34;Usage: </span><span style=color:#e6db74>${</span>0<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span>
-	echo <span style=color:#e6db74>&#34;Dumps the schema to schema.sql.&#34;</span>
-	echo <span style=color:#e6db74>&#34;Requires environment vars DB_NAME, DB_USER, and DB_PASSWORD&#34;</span>
-	exit <span style=color:#ae81ff>0</span>
-<span style=color:#66d9ef>fi</span>
-
-db_port_<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;3306&#34;</span>
-db_name_<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>DB_NAME<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span>
-valar_user_<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>DB_USER<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span>
-valar_password_<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>DB_PASSWORD<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span>
-
-<span style=color:#66d9ef>if</span> <span style=color:#f92672>((</span> $# &gt; <span style=color:#ae81ff>0</span> <span style=color:#f92672>))</span>; <span style=color:#66d9ef>then</span>
-	<span style=color:#f92672>(</span>&gt;&amp;<span style=color:#ae81ff>2</span> echo <span style=color:#e6db74>&#34;Usage: </span><span style=color:#e6db74>${</span>0<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span><span style=color:#f92672>)</span>
-	exit <span style=color:#ae81ff>1</span>
-<span style=color:#66d9ef>fi</span>
-
-mysqldump <span style=color:#ae81ff>\
-</span><span style=color:#ae81ff></span>  --skip-add-drop-table <span style=color:#ae81ff>\
-</span><span style=color:#ae81ff></span>  --single-transaction <span style=color:#ae81ff>\
-</span><span style=color:#ae81ff></span>  --host<span style=color:#f92672>=</span>127.0.0.1 <span style=color:#ae81ff>\
-</span><span style=color:#ae81ff></span>  --port<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>db_port_<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span> <span style=color:#ae81ff>\
-</span><span style=color:#ae81ff></span>  --user<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>db_user_<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span> <span style=color:#ae81ff>\
-</span><span style=color:#ae81ff></span>  --password<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>db_password_<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span> <span style=color:#ae81ff>\
-</span><span style=color:#ae81ff></span>  --no-data <span style=color:#ae81ff>\
-</span><span style=color:#ae81ff></span>  <span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>db_name_<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span> <span style=color:#ae81ff>\
-</span><span style=color:#ae81ff></span>  &gt; <span style=color:#e6db74>&#34;schema-</span><span style=color:#e6db74>${</span>db_name_<span style=color:#e6db74>}</span><span style=color:#e6db74>.sql&#34;</span>
-
-<span style=color:#75715e># remove the auto_increment -- we don&#39;t care</span>
-sed -r -i -e <span style=color:#e6db74>&#39;s/AUTO_INCREMENT=[0-9]+ //g&#39;</span> <span style=color:#e6db74>&#34;schema-</span><span style=color:#e6db74>${</span>db_name_<span style=color:#e6db74>}</span><span style=color:#e6db74>.sql&#34;</span>
-</code></pre></div><h2 id=backups>Backups</h2><p>This script will generate robust backups.
+</code></pre></div><h2 id=generate-robust-backups>Generate robust backups</h2><p>This script will generate robust backups.
 Each table is written to one gzipped file, with binary data hex-encoded.
 Having one table per file means that we only lose one table if a file is corrupted.
 Hex-encoding adds more robustness because tools can often fix corrupted gzip and UTF-8 files.
@@ -96,7 +62,41 @@ loc_<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;</span><spa
 <span style=color:#66d9ef>done</span>
 
 echo <span style=color:#e6db74>&#34;Backed up to </span><span style=color:#e6db74>${</span>loc_<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span>
-</code></pre></div><h2 id=generating-an-erd>Generating an ERD</h2><p>This will generate an <a href=https://en.wikipedia.org/wiki/Entity%E2%80%93relationship_model>ERD</a>
+</code></pre></div><h2 id=write-a-schema-file>Write a schema file</h2><p>Here’s a script to write the schema in a nice way.</p><div class=highlight><pre style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash><span style=color:#75715e>#!/usr/bin/env bash
+</span><span style=color:#75715e></span>set -euo pipefail
+IFS<span style=color:#f92672>=</span><span style=color:#e6db74>$&#39;\n\t&#39;</span>
+
+<span style=color:#66d9ef>if</span> <span style=color:#f92672>((</span> $# <span style=color:#f92672>==</span> <span style=color:#ae81ff>1</span> <span style=color:#f92672>))</span> <span style=color:#f92672>&amp;&amp;</span> <span style=color:#f92672>[[</span> <span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>1<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span> <span style=color:#f92672>==</span> <span style=color:#e6db74>&#34;--help&#34;</span> <span style=color:#f92672>]]</span>; <span style=color:#66d9ef>then</span>
+	echo <span style=color:#e6db74>&#34;Usage: </span><span style=color:#e6db74>${</span>0<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span>
+	echo <span style=color:#e6db74>&#34;Dumps the schema to schema.sql.&#34;</span>
+	echo <span style=color:#e6db74>&#34;Requires environment vars DB_NAME, DB_USER, and DB_PASSWORD&#34;</span>
+	exit <span style=color:#ae81ff>0</span>
+<span style=color:#66d9ef>fi</span>
+
+db_port_<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;3306&#34;</span>
+db_name_<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>DB_NAME<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span>
+valar_user_<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>DB_USER<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span>
+valar_password_<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>DB_PASSWORD<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span>
+
+<span style=color:#66d9ef>if</span> <span style=color:#f92672>((</span> $# &gt; <span style=color:#ae81ff>0</span> <span style=color:#f92672>))</span>; <span style=color:#66d9ef>then</span>
+	<span style=color:#f92672>(</span>&gt;&amp;<span style=color:#ae81ff>2</span> echo <span style=color:#e6db74>&#34;Usage: </span><span style=color:#e6db74>${</span>0<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span><span style=color:#f92672>)</span>
+	exit <span style=color:#ae81ff>1</span>
+<span style=color:#66d9ef>fi</span>
+
+mysqldump <span style=color:#ae81ff>\
+</span><span style=color:#ae81ff></span>  --skip-add-drop-table <span style=color:#ae81ff>\
+</span><span style=color:#ae81ff></span>  --single-transaction <span style=color:#ae81ff>\
+</span><span style=color:#ae81ff></span>  --host<span style=color:#f92672>=</span>127.0.0.1 <span style=color:#ae81ff>\
+</span><span style=color:#ae81ff></span>  --port<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>db_port_<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span> <span style=color:#ae81ff>\
+</span><span style=color:#ae81ff></span>  --user<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>db_user_<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span> <span style=color:#ae81ff>\
+</span><span style=color:#ae81ff></span>  --password<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>db_password_<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span> <span style=color:#ae81ff>\
+</span><span style=color:#ae81ff></span>  --no-data <span style=color:#ae81ff>\
+</span><span style=color:#ae81ff></span>  <span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>db_name_<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span> <span style=color:#ae81ff>\
+</span><span style=color:#ae81ff></span>  &gt; <span style=color:#e6db74>&#34;schema-</span><span style=color:#e6db74>${</span>db_name_<span style=color:#e6db74>}</span><span style=color:#e6db74>.sql&#34;</span>
+
+<span style=color:#75715e># remove the auto_increment -- we don&#39;t care</span>
+sed -r -i -e <span style=color:#e6db74>&#39;s/AUTO_INCREMENT=[0-9]+ //g&#39;</span> <span style=color:#e6db74>&#34;schema-</span><span style=color:#e6db74>${</span>db_name_<span style=color:#e6db74>}</span><span style=color:#e6db74>.sql&#34;</span>
+</code></pre></div><h2 id=generate-an-erd>Generate an ERD</h2><p>This will generate an <a href=https://en.wikipedia.org/wiki/Entity%E2%80%93relationship_model>ERD</a>
 from a database connection. The script will output a
 <a href=https://en.wikipedia.org/wiki/GraphML>GraphML</a> file, which you can open in a tool
 like <a href=https://www.yworks.com/products/yed>yEd</a> to apply a layout algorithm or apply
